# esolangs

./: Cargo.toml  README.md  commitlint.config.js  rustfmt.toml
.github/: setup-hooks.sh
.github/hooks/: commit-msg  pre-commit
.github/workflows/: code-check.yml  deploy-docs.yml
brainfuck/: Cargo.toml  README.md
brainfuck/bf/: Cargo.toml  README.md
brainfuck/bf/src/: args.rs  debugger.rs  errors.rs  input.rs  main.rs  source.rs
brainfuck/bf/tests/: debugger.rs  specs.rs
brainfuck/bf/tests/util/: mod.rs
brainfuck/brainlib/: Cargo.toml  README.md
brainfuck/brainlib/src/: lib.rs
brainfuck/brainlib/src/backend/: emitter.rs  mod.rs  optimizer.rs  vm.rs
brainfuck/brainlib/src/backend/common/: emitter.rs  instruction.rs  mod.rs  optimizer.rs  program.rs  settings.rs
brainfuck/brainlib/src/backend/interpreter/: engine.rs  mod.rs  runtime_error.rs  vm.rs
brainfuck/brainlib/src/backend/wasm/: mod.rs  wasm_module.rs  wasm_target.rs
brainfuck/brainlib/src/frontend/: ast.rs  lexer.rs  mod.rs  parse_error.rs  parser.rs  token.rs
brainfuck/brainlib/src/util/: io.rs  mod.rs
brainfuck/specs/: add.code.bf  hello-normal.code.bf
brainfuck/src/: bytecode.rs  emitter.rs  instruction.rs  lexer.rs  lib.rs  main.rs  optimizer.rs  parser.rs  util.rs  vm.rs
brainfuck/src/backend/: emitter.rs  instruction.rs  mod.rs  optimizer.rs  settings.rs  vm.rs
brainfuck/src/frontend/: ast.rs  lexer.rs  parser.rs  token.rs
brainfuck/src/util/: io.rs  mod.rs
brainfuck/tests/: input.rs  integration.rs  readme.rs  specs.rs
brainfuck/tests/specs/: add.code.bf  cat.code.bf  even.code.bf  hello-golf.code.bf
common/wasmitter/: Cargo.toml  README.md
common/wasmitter/src/: error.rs  indices.rs  instruction.rs  lib.rs  main.rs  module.rs  types.rs
common/wasmitter/src/func/: main.rs  mod.rs
common/wasmitter/src/function/: main.rs  mod.rs  scope.rs
common/wasmitter/src/indices/: func_idx.rs  global_idx.rs  label_idx.rs  local_idx.rs  mem_idx.rs  mod.rs  type_idx.rs  wasm_index.rs
common/wasmitter/src/instruction/: block_type.rs  const_instr.rs  expr.rs  instr.rs  mem_arg.rs  mod.rs  nn.rs  sx.rs
common/wasmitter/src/instructions/: const_instr.rs  instr.rs  mod.rs
common/wasmitter/src/internal/: func_uid.rs  index_kind.rs  mod.rs  module_uid.rs  wasm_index.rs
common/wasmitter/src/module/: export.rs  global.rs  import.rs  main.rs  mem.rs  mod.rs
common/wasmitter/src/text/: id.rs  mod.rs
common/wasmitter/src/types/: expr.rs  function.rs  global.rs  limits.rs  memory.rs  mod.rs  number.rs  result.rs  result_type.rs  val_type.rs  value.rs
