[package]
name = "bf"
version = "0.1.0"
authors = ["Tomasz Chojnacki <tomaszchojnacki2001@gmail.com>"]
edition = "2021"
description = "Command line interface for brainfuck compilation."
repository = "https://github.com/tchojnacki/esolangs"
license = "MIT OR Apache-2.0"
keywords = ["brainfuck", "compiler", "cli"]
categories = ["command-line-interface", "compilers"]
publish = false

[dependencies]
brainlib = { path = "../brainlib" }
clap = { version = "4.3.21", features = ["derive"] }
colored = "2.0.4"
rustyline = "12.0.0"
indoc = "2.0.4"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
