[package]
name = "brainlib"
version = "0.1.0"
authors = ["Tomasz Chojnacki <tomaszchojnacki2001@gmail.com>"]
edition = "2021"
description = "Crate used to compile, optimize and interpret Brainfuck."
repository = "https://github.com/tchojnacki/esolangs"
license = "MIT OR Apache-2.0"
keywords = ["brainfuck", "compiler", "interpreter", "esolangs"]
categories = ["compilers", "parser-implementations"]
publish = false

[dependencies]
thiserror = "1.0.49"
wasmitter = { path = "../../common/wasmitter" }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
test-case = "3.1.0"
